--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -71,7 +71,11 @@ parts:
 platforms:
   amd64:
   arm64:
+    build-on: [amd64, arm64]
+    build-for: [arm64]
   armhf:
+    build-on: [amd64, armhf]
+    build-for: [armhf]
 
 apps:
   peergos:
