--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -70,11 +70,13 @@ parts:
 
 platforms:
   amd64:
+    build-on: [amd64]
+    build-for: [amd64]
   arm64:
-    build-on: [amd64, arm64]
+    build-on: [amd64]
     build-for: [arm64]
   armhf:
-    build-on: [amd64, armhf]
+    build-on: [amd64]
     build-for: [armhf]
 
 apps:
